<resources>
    <string name="app_name">CleanYourWorld</string>
    <string name="barCode">Barcode</string>
    <string name="strMonday">Monday</string>
    <string name="strTuesday">Tuesday</string>
    <string name="strWednesday">Wednesday</string>
    <string name="strThursday">Thursday</string>
    <string name="strFriday">Friday</string>
    <string name="strSaturday">Saturday</string>
    <string name="strSunday">Sunday</string>
    <string name="srcSection">Search</string>
    <string name="srcProduct">Product</string>
    <string name="srcMaterial">Material</string>
    <string name="srcScan">Scan code</string>
    <string name="glcSection">Around you</string>
    <string name="glcFind">Garbage Islands</string>
    <string name="calSection">Calendar View\'s</string>
    <string name="calWeekSection">Calendar week\'s view</string>
    <string name="calMonthSection">Calendar month\'s view</string>
    <string name="sttSection">Change town</string>
    <string name="sttComune">Settings</string>
    <string name="strProblem">A problem as occurred</string>
    <string name="strNoRecycle">No recycling in this city</string>
    <string name="pressAgain">Press again back to close application</string>
    <string name="choose_regione">Choose Your Regione</string>
    <string name="choose_prov">Choose Your Province</string>
    <string name="choose_comune">Choose Yconfconfour Comune</string>
    <string name="location">Location</string>
    <string name="you_are_in">You are in:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="not_available">Not Available</string>
    <string name="choose_another_comune">No Collection Available for selected comune. Choose another one!</string>
    <string name="you_chose">You chose </string>
    <string name="strNeedCamera">You need to allow access to Camera</string>
    <string name="strNeedCameraForFragment">You need to allow access to Camera to use this fragment: if you had check the "never show again" button go to Settings, Applications, Permissions</string>
    <string name="strCollectionDay">Collection day</string>
    <string name="strScannDate">Scann date</string>
    <string name="strMaterial">Material</string>
    <string name="strBarcode">BarCode</string>
    <string name="continue_">Continue</string>
    <string name="back">Back</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="open_internet">Open an Internet connection and try again.</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="exit">EXIT</string>
    <string name="strClickOnFABToScann">Click on lower side button to initiate your first scan!!</string>
    <string name="strNotInDB">Product no in db</string>
    <string name="strShouldSendAllertMessage">Help us to grow up: click OK to send a message to server, we\'ll insert this product!</string>
    <string name="strDownloading">Download database from server</string>
    <string name="strTryAgain">No connection available, enable it and try again!</string>
    <string name="strMessageSent">Message sent!</string>
    <string name="sttSettings">Settings</string>
    <string name="strGPSAvailable">GPS is available on your device</string>
    <string name="strGSPNotAvailable">GPS is disabled in your device. Would you like to enable it</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strYouAreHere">You are here!</string>
    <string name="strNeedMultiplePermissions">You need to grant access to</string>
</resources>
