<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Umberto Ferracci from simone_mancini and published on 20/06/16 15.47
  ~ email:   umberto.ferracci@gmail.com
  ~ Project: CleanYourWorld
  ~ Package: /home/simone_mancini/AndroisStudioProjects/CleanYourWorld/app/src/main/res/layout/activity_configuration.xml
  ~ File name: activity_configuration.xml
  ~ Class name: activity_configuration.xml
  ~ Last modified: 20/06/16 15.47
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ufos.cyw16.cleanyourworld.ConfigurationActivity">

        <ImageView
            android:id="@+id/mapIV"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/italia_pol"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="false" />

        <TextView
            android:id="@+id/chooseTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/choose_regione"
            android:gravity="center_horizontal"
            android:layout_below="@+id/mapIV"
            android:layout_alignParentEnd="true" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="70dp"
            android:layout_below="@+id/search_config"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_"
            android:layout_gravity="bottom|right"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack"
            android:text="@string/back"
            android:theme="@style/BackButton"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="110dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:showAsAction="always"/>

        <android.support.v7.widget.SearchView
            android:id="@+id/search_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseTV"
            android:layout_alignStart="@+id/recycler_view"
            android:showAsAction="always"
            android:layout_alignEnd="@+id/mapIV">

        </android.support.v7.widget.SearchView>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchRecycle"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:textOff=""
            android:background="@android:color/transparent"
            android:textOn=""
            android:button="@null"
            android:padding="20dp"
            android:checked="false"
            android:theme="@style/MySwitch"
            android:layout_alignTop="@+id/search_config"
            android:layout_alignEnd="@+id/recycler_view" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trashIV"
            android:layout_toEndOf="@+id/switchRecycle"
            android:layout_alignBottom="@+id/search_config"
            android:layout_alignTop="@+id/search_config"
            android:background="@drawable/trash"/>


</RelativeLayout>
